SearchAfter on getCollections and result of requests